syntax = "proto3";
package product;
option go_package = "product";

message RequestEmpty {}

message Gastronomie { string name = 1; }

message Coordinate {
  // @inject_tag: bson:"lon"
  float lon = 1;
  // @inject_tag: bson:"lat"
  float lat = 2;
}

message Accompaniment { string name = 1; }

message Picture { string src = 1; }

message Gallery {
  int32 main = 1;
  repeated Picture pictures = 2; 
}

message Price {
  int64 base = 1;
  string currency = 2;
}

message Category {
  string name = 1;
}

message Location {
  string address = 1;
  string cpc = 2;
  string zone = 3;
  Coordinate location = 4;
}

message Schedule {
  string date = 1;
  string start_am = 2;
  string end_am = 3;
  string start_pm = 4;
  string end_pm = 5;
}

message Product {
  string name = 1;
  string id = 2; 
  string place_ref = 3;
  string place_name = 4;
  string place_logo = 5;
  string category = 6;
  int32 price = 7;
  string phone = 8;
  string description = 9;
  repeated Gastronomie gastronomie = 10;
  Location location = 11;
  int64 likes = 12;
  repeated string recipes = 13;
  repeated Accompaniment accompaniment = 14;
  int32 discount = 15;
  string size = 16;
  int32 quantity = 17;
  int32 spicy_level = 18;
  Gallery gallery = 20;
  repeated Schedule schedule = 21;
  int32 notation = 22;
}

message ListResponse {
  int32 status = 1;
  string error = 2;
  int64 total = 3;
  repeated Product data = 4;
}

message CreateRequest {
  Product payload = 1;
}

message CreateResponse {
  int32 status = 1;
  string error = 3;
  string payload = 2;
}

message DetailRequest {
  string id = 4;
}

message DetailResponse {
  int32 status = 1;
  string error = 2;
  Product payload = 4;
}

message UpdateRequest {
  string id = 1;
  Product payload = 2;
}

message UpdateResponse {
  int32 status = 1;
  string error = 2;
  Product payload = 3;
}

message DeleteRequest {
  string id = 3;
}

message DeleteResponse {
  int32 status = 1;
  string error = 2;
  bool payload = 3;
}

message SearchRequest {
  SearchParams payload = 1;
}

message SearchParams {
  string q = 1;
  int32 from = 2;
  int32 to = 3;
  string fromdate = 4;
  string todate = 5;
  repeated string category = 6;
}

service ProductService {
  rpc Search(SearchRequest) returns (ListResponse);
  rpc GetDetail(DetailRequest) returns (DetailResponse);
  rpc AddProduct(CreateRequest) returns (CreateResponse);
  rpc UpdateProduct(UpdateRequest) returns (UpdateResponse);
  rpc DeleteProduct(DeleteRequest) returns (DeleteResponse);
}